feat/150: fix applications, add yandex form, tests
